--- a/Reinforcement Learning/cartpole-lightGBM.ipynb
+++ b/Reinforcement Learning/cartpole-lightGBM.ipynb
@@ -64,8 +64,6 @@
     "            self.best_memory = sorted(self.best_memory, key=lambda x: x[1])\n",
     "            self.best_memory = self.best_memory[-MEMORY_SIZE:]\n",
     "            return True\n",
-    "            #self.best_memory.append((state, action, reward, next_state, done, step))\n",
-    "            #print([x[5] for x in self.best_memory])\n",
     "\n",
     "\n",
     "    def act(self, state):\n",
@@ -77,6 +75,7 @@
     "            q_values = self.model.predict(state)\n",
     "        else:\n",
     "            q_values = np.zeros(self.action_space).reshape(1, -1)\n",
+    "            \n",
     "        return np.argmax(q_values[0])\n",
     "\n",
     "    @staticmethod\n",
@@ -130,6 +129,7 @@
     "        self.isFit = True\n",
     "        self.exploration_rate *= EXPLORATION_DECAY\n",
     "        self.exploration_rate = max(EXPLORATION_MIN, self.exploration_rate)\n",
+    "        \n",
     "        \n",
     "class XGBQSolver(LightQSolver):\n",
     "    def __init__(self, observation_space, action_space):\n",
@@ -214,7 +214,22 @@
       "Run: 105700, exploration: 0.3098220977635573, score: 143 (Best: 500, Mean: 203.928, Worst: 139)\n",
       "Run: 105800, exploration: 0.30362565580828615, score: 188 (Best: 500, Mean: 206.254, Worst: 143)\n",
       "Run: 105900, exploration: 0.2975531426921204, score: 163 (Best: 500, Mean: 208.805, Worst: 147)\n",
-      "Run: 106000, exploration: 0.291602079838278, score: 153 (Best: 500, Mean: 210.949, Worst: 151)\n"
+      "Run: 106000, exploration: 0.291602079838278, score: 153 (Best: 500, Mean: 210.949, Worst: 151)\n",
+      "Run: 106100, exploration: 0.2857700382415124, score: 194 (Best: 500, Mean: 213.103, Worst: 154)\n",
+      "Run: 106200, exploration: 0.2800546374766822, score: 157 (Best: 500, Mean: 215.114, Worst: 157)\n",
+      "Run: 106300, exploration: 0.27445354472714856, score: 257 (Best: 500, Mean: 216.995, Worst: 160)\n",
+      "Run: 106400, exploration: 0.2689644738326056, score: 162 (Best: 500, Mean: 218.7875, Worst: 162)\n",
+      "Run: 106500, exploration: 0.26358518435595346, score: 150 (Best: 500, Mean: 220.717, Worst: 165)\n",
+      "Run: 106600, exploration: 0.25831348066883436, score: 214 (Best: 500, Mean: 222.3085, Worst: 167)\n",
+      "Run: 106700, exploration: 0.2531472110554577, score: 180 (Best: 500, Mean: 223.9345, Worst: 168)\n",
+      "Run: 106800, exploration: 0.24808426683434853, score: 291 (Best: 500, Mean: 225.6275, Worst: 171)\n",
+      "Run: 106900, exploration: 0.24312258149766156, score: 208 (Best: 500, Mean: 226.6815, Worst: 173)\n",
+      "Run: 107000, exploration: 0.2382601298677083, score: 211 (Best: 500, Mean: 228.179, Worst: 174)\n",
+      "Run: 107100, exploration: 0.23349492727035415, score: 200 (Best: 500, Mean: 229.3675, Worst: 175)\n",
+      "Run: 107200, exploration: 0.22882502872494706, score: 500 (Best: 500, Mean: 230.8445, Worst: 177)\n",
+      "Run: 107300, exploration: 0.22424852815044813, score: 262 (Best: 500, Mean: 232.062, Worst: 179)\n",
+      "Run: 107400, exploration: 0.21976355758743915, score: 193 (Best: 500, Mean: 233.128, Worst: 180)\n",
+      "Run: 107500, exploration: 0.21536828643569036, score: 245 (Best: 500, Mean: 234.1515, Worst: 181)\n"
      ]
     }
    ],
