tested dqn model

--- a/Reinforcement Learning/cartpole-lightGBM.ipynb
+++ b/Reinforcement Learning/cartpole-lightGBM.ipynb
@@ -116,7 +116,7 @@
     "        if len(self.best_memory) < BATCH_SIZE:\n",
     "            return\n",
     "    \n",
-    "        batch = dqn_solver.best_memory[-BATCH_SIZE//2:] + random.sample(dqn_solver.best_memory, BATCH_SIZE//2)\n",
+    "        batch = self.best_memory[-BATCH_SIZE//2:] + random.sample(self.best_memory, BATCH_SIZE//2)\n",
     "        all_frames = np.array(sum([b for b, step in batch], []), dtype='object')\n",
     "        len_frames = all_frames.shape[0]\n",
     "        # print(\"Total frames to train\", len_frames)\n",
@@ -131,8 +131,8 @@
     "\n",
     "        # already fit model\n",
     "        if self.isFit:\n",
-    "            q_values = dqn_solver.model.predict(states).astype('float')\n",
-    "            q_updates = np.where(terminals, rewards, (rewards + GAMMA * np.amax(dqn_solver.model.predict(states_next), axis=1)).astype('float'))\n",
+    "            q_values = self.model.predict(states).astype('float')\n",
+    "            q_updates = np.where(terminals, rewards, (rewards + GAMMA * np.amax(self.model.predict(states_next), axis=1)).astype('float'))\n",
     "        else:\n",
     "            q_values = np.zeros((len_frames, self.action_space))\n",
     "            q_updates = rewards\n",
@@ -650,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
