define plotting function

--- a/Reinforcement Learning/CartPole/cartpole-simple_physics.ipynb
+++ b/Reinforcement Learning/CartPole/cartpole-simple_physics.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pyvirtualdisplay'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\stefano.giannini_ama\\Documents\\Python\\Learn\\data-science_projects\\Reinforcement Learning\\CartPole\\cartpole-simple_physics.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/stefano.giannini_ama/Documents/Python/Learn/data-science_projects/Reinforcement%20Learning/CartPole/cartpole-simple_physics.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgym\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/stefano.giannini_ama/Documents/Python/Learn/data-science_projects/Reinforcement%20Learning/CartPole/cartpole-simple_physics.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpyvirtualdisplay\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/stefano.giannini_ama/Documents/Python/Learn/data-science_projects/Reinforcement%20Learning/CartPole/cartpole-simple_physics.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/stefano.giannini_ama/Documents/Python/Learn/data-science_projects/Reinforcement%20Learning/CartPole/cartpole-simple_physics.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pyvirtualdisplay'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gym\n",
     "import numpy as np\n",
@@ -42,6 +30,137 @@
     "# To get smooth animations\n",
     "import matplotlib.animation as animation\n",
     "mpl.rc('animation', html='jshtml')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualize Actions / Observations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def record_scenario(env, policy, num_frames=100) -> dict:\n",
+    "    frames = []\n",
+    "    obs_mat = np.empty((num_frames, 4))\n",
+    "    actions = np.empty((num_frames,))\n",
+    "    rewards = np.empty((num_frames,))\n",
+    "    dones = np.empty((num_frames,), dtype=int)\n",
+    "    first_done_info = ''\n",
+    "    obs = env.reset()  # initial observation\n",
+    "    for i in range(num_frames):\n",
+    "        action = policy(obs)\n",
+    "        obs, reward, done, info = env.step(action)\n",
+    "        img = env.render(mode=\"rgb_array\")\n",
+    "        frames.append(img)\n",
+    "        obs_mat[i,:] = obs\n",
+    "        actions[i] = action\n",
+    "        rewards[i] = reward\n",
+    "        dones[i] = int(done)\n",
+    "        if done and first_done_info == '':\n",
+    "            first_done_info = info\n",
+    "    record = {'frames': frames, 'obs': obs_mat, 'actions': actions, 'rewards': \n",
+    "              rewards, 'dones': dones, 'first_done_info':first_done_info}\n",
+    "    return record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_scene(num, frames, patch, time_text, obs_mat, actions, cum_rewards, dones):\n",
+    "    patch.set_data(frames[num])\n",
+    "    text = f\"frame: {num}\"\n",
+    "    text += \", Obs: ({:.3f}, {:.3f}, {:.3f}, {:.3f})\\n\".format(*obs_mat[num,:])\n",
+    "    text += f\"Action: {actions[num]}\"\n",
+    "    text += f\", Cumulative Reward: {cum_rewards[num]}\"\n",
+    "    text += f\", Done: {dones[num]}\"\n",
+    "    time_text.set_text(text)\n",
+    "    return patch, time_text\n",
+    "\n",
+    "def plot_animation(record, repeat=False, interval=40):\n",
+    "    '''record should contain\n",
+    "    frames: list of N frames\n",
+    "    obs: (N, 4) array of observations\n",
+    "    actions: (N, ) array of actions {0, 1}\n",
+    "    rewards: (N, ) array of rewards at each step {0, 1}\n",
+    "    dones: (N, 1) array of dones {0, 1}\n",
+    "    '''\n",
+    "    cum_rewards = np.cumsum(record['rewards'])\n",
+    "    frames = record['frames']\n",
+    "    fig = plt.figure()\n",
+    "    patch = plt.imshow(record['frames'][0])\n",
+    "    ax = plt.gca()\n",
+    "    time_text = ax.text(0., 0.95,'',horizontalalignment='left',verticalalignment='top', transform=ax.transAxes)\n",
+    "    plt.axis('off')\n",
+    "    anim = animation.FuncAnimation(\n",
+    "        fig, update_scene, fargs=(frames, patch, time_text, record['obs'], record['actions'], cum_rewards, record['dones']),\n",
+    "        frames=len(frames), repeat=repeat, interval=interval)\n",
+    "    plt.close()\n",
+    "    return anim"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Policy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_policy(policy_func, n_scenario = N_scenario, max_actions = MAX_ACTIONS, verbose=False):\n",
+    "    final_rewards = []\n",
+    "    for episode in range(n_scenario):\n",
+    "        if verbose and episode % 50 == 0:\n",
+    "            print(episode)\n",
+    "        episode_rewards = 0\n",
+    "        obs = env.reset()  # reset to a random position\n",
+    "        for step in range(max_actions):\n",
+    "            action = policy_func(obs)\n",
+    "            obs, reward, done, info = env.step(action)\n",
+    "            episode_rewards += reward\n",
+    "            if done:\n",
+    "                break\n",
+    "        final_rewards.append(episode_rewards)\n",
+    "    return final_rewards"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_policy(final_rewards, policy_name:str=''):\n",
+    "    fig = plt.plot(range(len(final_rewards)), final_rewards)\n",
+    "    plt.grid()\n",
+    "    plt.title(policy_name + \" Mean Reward {:.2f}, Std Reward {:.2f}\".format(np.mean(final_rewards), np.min(final_rewards)))\n",
+    "    plt.ylabel('Cum Reward')\n",
+    "    plt.xlabel('Iteration')\n",
+    "    plt.ylim(0, max(final_rewards)*1.1)\n",
+    "    return fig"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Combines policy"
    ]
   }
  ],
