--- a/Reinforcement Learning/CartPole/cartpole-simple_physics.ipynb
+++ b/Reinforcement Learning/CartPole/cartpole-simple_physics.ipynb
@@ -238,6 +238,7 @@
    "source": [
     "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
     "from sklearn.metrics import f1_score, accuracy_score\n",
+    "from sklearn.neural_network import MLPClassifier\n",
     "\n",
     "obs = theta_omega_record['obs']\n",
     "actions = theta_omega_record['actions']\n",
@@ -253,7 +254,10 @@
    "outputs": [],
    "source": [
     "clf = DecisionTreeClassifier(max_depth=3,class_weight='balanced')\n",
-    "clf.fit(obs, actions)"
+    "mlp = MLPClassifier(solver='lbfgs', alpha=1e-5,\n",
+    "                    hidden_layer_sizes=(15,9), random_state=10, max_iter=100000, tol=1e-6)\n",
+    "clf.fit(obs, actions)\n",
+    "mlp.fit(obs, actions)"
    ]
   },
   {
@@ -262,7 +266,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f1_score(actions, clf.predict(obs)), accuracy_score(actions, clf.predict(obs))"
+    "print(f1_score(actions, clf.predict(obs)), accuracy_score(actions, clf.predict(obs)))\n",
+    "print(f1_score(actions, mlp.predict(obs)), accuracy_score(actions, mlp.predict(obs)))"
    ]
   },
   {
@@ -272,7 +277,7 @@
    "outputs": [],
    "source": [
     "plt.figure(dpi=300)\n",
-    "plot_tree(clf, feature_names=['x', 'v', r'$\\theta$', r'$\\omega$'], class_names=[\"left\",\"right\"]);"
+    "#plot_tree(clf, feature_names=['x', 'v', r'$\\theta$', r'$\\omega$'], class_names=[\"left\",\"right\"]);"
    ]
   },
   {
@@ -290,11 +295,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# color = clf.predict(obs)\n",
+    "color = mlp.predict(obs)\n",
     "speed = obs[:, 1]\n",
     "theta = obs[:, 2]\n",
     "plt.figure(figsize=(12, 8), dpi=300)\n",
-    "plt.scatter(theta, speed, c=actions, s=2), print(obs[:, 2].shape)\n",
+    "plt.scatter(theta, speed, c=color, s=2), print(obs[:, 2].shape)\n",
     "plt.vlines([0.03, -0.03], ymin=min(speed), ymax=max(speed))\n",
     "plt.hlines([-0.032], xmin=min(theta), xmax=max(theta))\n",
     "plt.xlabel(r'$\\theta$')\n",
@@ -326,12 +331,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "929ea3a73902e04b651b50d7e8bff86e69e28c3f97df2b308a538a481df81bfd"
+    "hash": "4f523f7c76dd18e7ed336217f32f6f704c23c323644912475b9d3570cf04b060"
    }
   }
  },
