--- a/Reinforcement Learning/CartPole/cartpole-simple_physics.ipynb
+++ b/Reinforcement Learning/CartPole/cartpole-simple_physics.ipynb
@@ -277,7 +277,7 @@
    "outputs": [],
    "source": [
     "plt.figure(dpi=300)\n",
-    "#plot_tree(clf, feature_names=['x', 'v', r'$\\theta$', r'$\\omega$'], class_names=[\"left\",\"right\"]);"
+    "# plot_tree(clf, feature_names=['x', 'v', r'$\\theta$', r'$\\omega$'], class_names=[\"left\",\"right\"]);"
    ]
   },
   {
@@ -331,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
