--- a/Reinforcement Learning/LunarLander/_.ipynb
+++ b/Reinforcement Learning/LunarLander/_.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import gym\n",
-    "import torch\n",
-    "\n"
+    "import torch"
    ]
   },
   {
@@ -24,52 +23,7 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class PolicyNetwork(torch.nn.Module):\n",
-    "    def __init__(self, n=4, in_dim=128):\n",
-    "        super(PolicyNetwork, self).__init__()\n",
-    "        self.fc1 = torch.nn.Linear(in_dim, 128)\n",
-    "        self.fc2 = torch.nn.Linear(128, 128)\n",
-    "        self.fc3 = torch.nn.Linear(128, 128)\n",
-    "        self.fc4 = torch.nn.Linear(128, n) \n",
-    "        self.l_relu = torch.nn.LeakyReLU(0.1)\n",
-    "\n",
-    "    def forward(self, x):        \n",
-    "        x = self.l_relu(self.fc1(x))\n",
-    "        x = self.l_relu(self.fc2(x))\n",
-    "        x = self.l_relu(self.fc3(x))       \n",
-    "        y = self.fc4(x)       \n",
-    "        y = F.softmax(y, dim=-1)        \n",
-    "        return y    \n",
-    "\n",
-    "    def sample_action(self, state):\n",
-    "        if not state is torch.Tensor:\n",
-    "            state = torch.from_numpy(state).float().to(device)\n",
-    "        if len(state.size()) == 1:\n",
-    "            state = state.unsqueeze(0)       \n",
-    "        y = self(state)\n",
-    "        dist = Categorical(y)\n",
-    "        action = dist.sample()\n",
-    "        log_probability = dist.log_prob(action)\n",
-    "        return action.item(), log_probability.item()\n",
-    "\n",
-    "    def best_action(self, state):        \n",
-    "        if not state is torch.Tensor:\n",
-    "            state = torch.from_numpy(state).float().to(device)        \n",
-    "        if len(state.size()) == 1:\n",
-    "            state = state.unsqueeze(0)        \n",
-    "        y = self(state).squeeze()        \n",
-    "        action = torch.argmax(y)        \n",
-    "        return action.item()    \n",
-    "\n",
-    "    def evaluate_actions(self, states, actions):\n",
-    "        y = self(states)        \n",
-    "        dist = Categorical(y)        \n",
-    "        entropy = dist.entropy()        \n",
-    "        log_probabilities = dist.log_prob(actions) \n",
-    "        return log_probabilities, entropy\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -95,7 +49,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
