record data (no rfames) recorded

--- a/Reinforcement Learning/CartPole/cartpole-simple_physics.ipynb
+++ b/Reinforcement Learning/CartPole/cartpole-simple_physics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def record_scenario(env, policy, num_frames=200) -> dict:\n",
+    "def record_scenario(env, policy, num_frames=500) -> dict:\n",
     "    frames = []\n",
     "    obs_mat = np.empty((num_frames, 4))\n",
     "    actions = np.empty((num_frames,))\n",
@@ -69,12 +69,32 @@
     "            first_done_info = info\n",
     "    record = {'frames': frames, 'obs': obs_mat, 'actions': actions, 'rewards': \n",
     "              rewards, 'dones': dones, 'first_done_info':first_done_info}\n",
+    "    return record\n",
+    "\n",
+    "def record_data(env, policy, num_frames=500):\n",
+    "    obs_mat = np.empty((num_frames, 4))\n",
+    "    actions = np.empty((num_frames,))\n",
+    "    rewards = np.empty((num_frames,))\n",
+    "    dones = np.empty((num_frames,), dtype=int)\n",
+    "    first_done_info = ''\n",
+    "    obs = env.reset()  # initial observation\n",
+    "    for i in range(num_frames):\n",
+    "        action = policy(obs)\n",
+    "        obs_mat[i,:] = obs\n",
+    "        obs, reward, done, info = env.step(action)\n",
+    "        actions[i] = action\n",
+    "        rewards[i] = reward\n",
+    "        dones[i] = int(done)\n",
+    "        if done and first_done_info == '':\n",
+    "            first_done_info = info\n",
+    "    record = {'obs': obs_mat, 'actions': actions, 'rewards': \n",
+    "              rewards, 'dones': dones, 'first_done_info':first_done_info}\n",
     "    return record"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
