--- a/Reinforcement Learning/CartPole/cartpole-simple_physics.ipynb
+++ b/Reinforcement Learning/CartPole/cartpole-simple_physics.ipynb
@@ -7,8 +7,6 @@
    "outputs": [],
    "source": [
     "import gym\n",
-    "import numpy as np\n",
-    "import os\n",
     "\n",
     "# Common imports\n",
     "import numpy as np\n",
@@ -543,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
