tested the model on the environment

--- a/Reinforcement Learning/CartPole/cartpole_random-sampling.ipynb
+++ b/Reinforcement Learning/CartPole/cartpole_random-sampling.ipynb
@@ -117,8 +117,7 @@
     "        obs_res.append(np.array(obs))\n",
     "    \n",
     "    return obs_res\n",
-    "\n",
-    "    \n"
+    "\n"
    ]
   },
   {
@@ -154,42 +153,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Actions length improvement: 11 321\n",
-      "Actions length improvement: 15 256\n",
-      "Actions length improvement: 17 500\n",
-      "Actions length improvement: 9 357\n",
-      "Actions length improvement: 16 500\n",
-      "Actions length improvement: 10 500\n",
-      "Actions length improvement: 21 500\n",
-      "Actions length improvement: 19 500\n",
-      "Actions length improvement: 28 402\n"
+      "[0] Actions length improvement: 21 -> 399\n"
      ]
     }
    ],
    "source": [
     "res = {}\n",
-    "seeds = [0, 5, 10, 21, 42, 63, 84, 100, 121]\n",
+    "seeds = [0, 1, 5, 10, 21, 42, 47, 63, 84, 100, 121, 144]\n",
     "for seed in seeds:\n",
     "    actions = get_random_actions(env, seed)\n",
     "    best_actions = find_best_actions(env, actions)\n",
-    "    print(f\"{seed}Actions length improvement:\",len(actions), \"->\", len(best_actions))\n",
+    "    print(f\"[{seed}] Actions length improvement:\",len(actions), \"->\", len(best_actions))\n",
     "    res[seed] = best_actions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs = get_obs(env, res)"
+    "obs = get_obs(env, res)\n",
+    "array_obs = np.concatenate(obs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array_actions = np.concatenate([np.array(act[1]) for act in res.items()])"
    ]
   },
   {
@@ -197,18 +198,7 @@
    "execution_count": 59,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "array_obs = np.concatenate(obs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "array_actions = np.concatenate([np.array(act[1]) for act in res.items()])"
-   ]
+   "source": []
   },
   {
    "attachments": {},
@@ -220,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -290,12 +280,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test model on environment"
+    "# Test model on environment\n",
+    "It suuucks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
