--- a/Reinforcement Learning/CartPole/cartpole_random-sampling.ipynb
+++ b/Reinforcement Learning/CartPole/cartpole_random-sampling.ipynb
@@ -226,7 +226,7 @@
     "from lightgbm import LGBMClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "lbc = LGBMClassifier(n_estimators=200)\n",
+    "lbc = LGBMClassifier(n_estimators=100)\n",
     "\n",
     "lbc.fit(array_obs, array_actions)\n",
     "accuracy_score(array_actions, lbc.predict(array_obs))"
@@ -256,6 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "steps = []\n",
     "for seed in range(1, 200, 5):\n",
     "    env.seed(seed)\n",
     "    ob = env.reset()\n",
@@ -267,7 +268,7 @@
     "        # action = res[seeds[4]][step]\n",
     "        ob, reward, terminated, info = env.step(action)\n",
     "        step+=1\n",
-    "        if terminated: reward*=-1;break\n",
+    "        if terminated: steps.append(step);break\n",
     "        \n",
     "    print(seed, ':',step)"
    ]
@@ -277,7 +278,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.median(steps), np.mean(steps), np.min(steps), np.max(steps)"
+   ]
   },
   {
    "cell_type": "code",
@@ -303,12 +306,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4f523f7c76dd18e7ed336217f32f6f704c23c323644912475b9d3570cf04b060"
+    "hash": "929ea3a73902e04b651b50d7e8bff86e69e28c3f97df2b308a538a481df81bfd"
    }
   }
  },
