apply action space sample instead of numpy

--- a/Reinforcement Learning/CartPole/cartpole_random-sampling.ipynb
+++ b/Reinforcement Learning/CartPole/cartpole_random-sampling.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
     "    step=0\n",
     "    while True:\n",
     "        step+=1\n",
-    "        action = np.random.choice([0,1])\n",
+    "        action = env.action_space.sample()\n",
     "        ob, rewards, terminated, info = env.step(action)\n",
     "        actions.append(action)\n",
     "        if terminated: break\n",
@@ -71,7 +71,7 @@
     "        # print(\"continue to explore\", len(new_actions))\n",
     "        while True:\n",
     "            step+=1\n",
-    "            action = np.random.choice([0,1])\n",
+    "            action = env.action_space.sample()\n",
     "            ob, rewards, terminated, info = env.step(action)\n",
     "            new_actions.append(action)\n",
     "            if terminated: break\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,9 +141,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0] Actions length improvement: 10 -> 240\n",
+      "[1] Actions length improvement: 12 -> 338\n",
+      "[5] Actions length improvement: 17 -> 152\n",
+      "[10] Actions length improvement: 25 -> 500\n",
+      "[21] Actions length improvement: 16 -> 500\n",
+      "[42] Actions length improvement: 21 -> 463\n",
+      "[47] Actions length improvement: 19 -> 388\n",
+      "[63] Actions length improvement: 17 -> 185\n",
+      "[84] Actions length improvement: 19 -> 500\n",
+      "[100] Actions length improvement: 16 -> 213\n",
+      "[121] Actions length improvement: 18 -> 500\n",
+      "[144] Actions length improvement: 14 -> 500\n"
+     ]
+    }
+   ],
    "source": [
     "res = {}\n",
     "seeds = [0, 1, 5, 10, 21, 42, 47, 63, 84, 100, 121, 144]\n",
@@ -156,9 +175,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4479, 4)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "obs = get_obs(env, res)\n",
     "array_obs = np.concatenate(obs[:])\n",
@@ -167,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,9 +249,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8070997990622907"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from lightgbm import LGBMClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
@@ -234,9 +275,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([791, 597, 805, 807])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lbc.feature_importances_"
    ]
@@ -252,9 +304,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 : 500\n",
+      "6 : 500\n",
+      "11 : 500\n",
+      "16 : 500\n",
+      "21 : 500\n",
+      "26 : 500\n",
+      "31 : 500\n",
+      "36 : 500\n",
+      "41 : 500\n",
+      "46 : 500\n",
+      "51 : 500\n",
+      "56 : 500\n",
+      "61 : 500\n",
+      "66 : 500\n",
+      "71 : 500\n",
+      "76 : 500\n",
+      "81 : 500\n",
+      "86 : 500\n",
+      "91 : 500\n",
+      "96 : 500\n",
+      "101 : 500\n",
+      "106 : 500\n",
+      "111 : 500\n",
+      "116 : 500\n",
+      "121 : 500\n",
+      "126 : 500\n",
+      "131 : 500\n",
+      "136 : 500\n",
+      "141 : 500\n",
+      "146 : 500\n",
+      "151 : 500\n",
+      "156 : 500\n",
+      "161 : 500\n",
+      "166 : 500\n",
+      "171 : 500\n",
+      "176 : 500\n",
+      "181 : 500\n",
+      "186 : 500\n",
+      "191 : 500\n",
+      "196 : 500\n"
+     ]
+    }
+   ],
    "source": [
     "steps = []\n",
     "for seed in range(1, 200, 5):\n",
@@ -270,14 +369,25 @@
     "        step+=1\n",
     "        if terminated: steps.append(step);break\n",
     "        \n",
-    "    print(seed, ':',step)"
+    "    print(\"Seed:\", seed, '->',step)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(500.0, 500.0, 500, 500)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.median(steps), np.mean(steps), np.min(steps), np.max(steps)"
    ]
